logs/server.log

> vibe-generated-app@1.0.0 dev
> vite


  VITE v5.4.20  ready in 227 ms

  ➜  Local:   http://localhost:3000/
  ➜  Network: http://172.20.50.56:3000/
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: /home/workspace): [Error] Cannot find package '/home/workspace/node_modules/tailwindcss/index.js' imported from /home/workspace/postcss.config.js
Error: Cannot find package '/home/workspace/node_modules/tailwindcss/index.js' imported from /home/workspace/postcss.config.js
    at legacyMainResolve (node:internal/modules/esm/resolve:204:26)
    at packageResolve (node:internal/modules/esm/resolve:778:12)
    at moduleResolve (node:internal/modules/esm/resolve:858:18)
    at defaultResolve (node:internal/modules/esm/resolve:990:11)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:768:20)
    at ModuleLoader.resolve (node:internal/modules/esm/loader:745:38)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:318:38)
    at #link (node:internal/modules/esm/module_job:208:49)] {
  code: 'ERR_MODULE_NOT_FOUND'
}

Node.js v24.8.0
